Implement  sign in, sign up, profile, notification, block list, me pages

--- a/src/styles/layouts/shared/_layout.scss
+++ b/src/styles/layouts/shared/_layout.scss
@@ -16,7 +16,8 @@
 .layout-contained {
   .container {
     max-width: $contained-layout-width;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     width: 100%;
     @include media(767px) {
       max-width: 100%;
