--- a/src/styles/views/_topbar.scss
+++ b/src/styles/views/_topbar.scss
@@ -4,3 +4,15 @@
   border-radius: 50%;
 }
 
+.setting-profile {
+  margin-left: 15px;
+  .name {
+    margin-top: 0;
+    font-weight: 500;
+    margin-bottom: 0px;
+  }
+  .see {
+    color: #e3e3e3;
+  }
+}
+
