✓ Target for brand icon ✓ Hide category bar ✓ redesign notifications pop over ✓ redesign main menu

--- a/src/styles/views/_topbar.scss
+++ b/src/styles/views/_topbar.scss
@@ -5,14 +5,7 @@
 }
 
 .setting-profile {
-  margin-left: 15px;
-  .name {
-    margin-top: 0;
-    font-weight: 500;
-    margin-bottom: 0px;
-  }
-  .see {
-    color: #e3e3e3;
-  }
+  margin-left: 12px;
+  flex: 1;
 }
 
