--- a/src/styles/views/_me.scss
+++ b/src/styles/views/_me.scss
@@ -1,8 +1,8 @@
 .empty-list-wrapper {
-  margin-top: 15%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  position: absolute;
   .empty-description {
     margin-top: 30px;
     font-weight: 900;
@@ -10,6 +10,7 @@
     line-height: 110%;
     text-transform: uppercase;
     text-align: center;
+    white-space: pre-line;
   }
   .company-wrapper {
     display: flex;
