--- a/src/styles/layouts/shared/_layout.scss
+++ b/src/styles/layouts/shared/_layout.scss
@@ -19,6 +19,7 @@
     margin-left: auto;
     margin-right: auto;
     width: 100%;
+    z-index: 10;
     @include media(767px) {
       max-width: 100%;
     }
